@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2019, CEA
+* Copyright (c) 2021, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -40,6 +40,7 @@ public:
 
   Entree& interpreter(Entree& is);
   virtual int lire_motcle_non_standard(const Motcle&, Entree&);
+  static int print_more_infos;
 
 private:
   const Domaine& find_domain(const Nom& nom);
